
Contributors to this release: Dylan Aïssi, Gert van de Kraats

Main changes since 0.5.2:
- Add an AppStream file (issue#308)
- Implement a draft of the newer network communication protocol (issue#149)
- Improve the systemd .service file (issue#314)
- Add a parameter to choose the database type to use


galileo 0.5.2 (????-??-??)
--------------------------

Main changes since 0.5.1:
- Add support for the Alta (issue#261)


galileo 0.5.1 (2016-09-18)
--------------------------

This is the first patch release of galileo 0.5, a free utility to securely
synchronize fitbit bluetooth trackers with the fitbit web service.

This release restores a working default for the synchronisation server name,
and makes this setting a configurable parameter.

Contributors to this release: Antenore Gatta.

Main changes since 0.5:
- Make the server name a configuration option (PR#22)
- Change the default synchronisation server to a working default (issue#296)


galileo 0.5 (2016-07-22)
------------------------

This is the next feature release of galileo, a free utility to securely
synchronize fitbit bluetooth trackers with the fitbit web-service.

This release is a great improvement over the 0.4 branch. It add support
for python 3 as well as rework the communication layer to get rid of timeout
as exceptions.

Contributor to this release: Dean Giberson, Richard Weait, Chris Wayne,
David Vasak, Mike Frysinger, Nenad Jankovic, pozorvlak, Dylan Aïssi and
Antenore Gatta.

Main changes since 0.4.4:
- Add a pair mode (issue#33)
- Removal of the Timeout class (issue#43)
- Get a UI abstraction layer (issue#31)
- Keep a rolling log of the last communication to help debugging (issue#67)
- Support sending logging output to syslog (issue#134)
- Catch HTTPError when syncing (issue#147)
- Improve Charge HR support (issue#148)
- Improve Discovery process (issue#231)
- Add Support for python 3.4 (issue#116)
- Add support for newer dongles (issue#236)
- Update the server name (issue#277)

